Finished filtering by categories

--- a/client/src/app/shop/shop-categories/shop-categories.component.html
+++ b/client/src/app/shop/shop-categories/shop-categories.component.html
@@ -4,7 +4,7 @@
       class="back-btn"
       style="cursor: pointer"
       (click)="onGetBackCategory(categories[0].id_cat_parent)"
-      >< back</a
+      >&larr; back</a
     >
   </ng-container>
   <div id="shop-categories">
