--- a/client/src/app/shop/category-products/filters/filters.component.html
+++ b/client/src/app/shop/category-products/filters/filters.component.html
@@ -18,7 +18,7 @@
     <div class="filter-block-row filter-header active">
       <h3>Brands</h3>
     </div>
-    <div id="filter-brands-holder" (change)="onBrandsChange($event)">
+    <div id="filter-brands-holder" (change)="onBrandsChange()">
       <div class="filter-block-row" *ngFor="let brand of brands; let i = index">
         <input
           type="checkbox"
@@ -37,7 +37,7 @@
     <div class="filter-block-row filter-header active">
       <h3>Tags</h3>
     </div>
-    <div id="filter-tags-holder" (change)="onTagsChange($event)">
+    <div id="filter-tags-holder" (change)="onTagsChange()">
       <div class="filter-block-row" *ngFor="let tag of tags; let i = index">
         <input
           type="checkbox"
@@ -56,7 +56,7 @@
     <div class="filter-block-row filter-header">
       <h3>All Categories</h3>
     </div>
-    <div id="filter-categories-holder">
+    <div id="filter-categories-holder" (change)="onFilterCategoriesChange()">
       <div
         class="filter-block-row"
         *ngFor="let category of categories; let i = index"
@@ -64,8 +64,9 @@
         <input
           type="checkbox"
           [id]="category.category_name + i"
-          [value]="category.category_name + i"
+          [value]="category.id_category"
           [checked]="category.id_category === activeCategory"
+          class="tb-categories"
         />
         <label [for]="category.category_name + i">{{
           category.category_name
