Added alot of features on home page

--- a/client/src/app/home/cover/cover.component.html
+++ b/client/src/app/home/cover/cover.component.html
@@ -19,6 +19,6 @@
       Empowering Your Computing Journey: Unleash Limitless Possibilities with
       Our Premier PC Solutions and Expert Guidance.
     </h2>
-    <a href="#" id="cover-btn" class="a-btn">Shop now!</a>
+    <a routerLink="/shop" id="cover-btn" class="a-btn">Shop now!</a>
   </div>
 </div>
