--- a/client/src/app/home/interactive-categories/interactive-categories.component.html
+++ b/client/src/app/home/interactive-categories/interactive-categories.component.html
@@ -12,15 +12,30 @@
         alt="Creative Loudspeaker"
       />
     </div>
-    <div class="category-info-circle monitor-circle"></div>
+    <div
+      class="category-info-circle monitor-circle"
+      routerLink="/shop/products/10"
+    ></div>
     <div class="category-info-popover monitor-popover">Monitors</div>
-    <div class="category-info-circle speaker-circle"></div>
+    <div
+      class="category-info-circle speaker-circle"
+      routerLink="/shop/products/2"
+    ></div>
     <div class="category-info-popover speaker-popover">Speakers</div>
-    <div class="category-info-circle mouse-circle"></div>
+    <div
+      class="category-info-circle mouse-circle"
+      routerLink="/shop/products/20"
+    ></div>
     <div class="category-info-popover mouse-popover">Mouses</div>
-    <div class="category-info-circle keyboard-circle"></div>
+    <div
+      class="category-info-circle keyboard-circle"
+      routerLink="/shop/products/21"
+    ></div>
     <div class="category-info-popover keyboard-popover">Keyboards</div>
-    <div class="category-info-circle pcs-circle"></div>
+    <div
+      class="category-info-circle pcs-circle"
+      routerLink="/shop/products/1"
+    ></div>
     <div class="category-info-popover pcs-popover">Desktop PCs</div>
   </div>
 </div>
