--- a/client/src/app/shop/category-products/category-products.component.css
+++ b/client/src/app/shop/category-products/category-products.component.css
@@ -12,3 +12,22 @@
   width: 80%;
   padding: 0.5rem 0rem 0.5rem 1rem;
 }
+
+@media (max-width: 918px) {
+  #category-products-left {
+    width: 60%;
+    margin: 0 auto;
+  }
+  #category-products-right {
+    width: 100%;
+  }
+  #category-products-holder {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 532px) {
+  #category-products-left {
+    width: 100%;
+  }
+}
