Working on search feature

--- a/client/src/app/header/header-bottom/header-bottom.component.html
+++ b/client/src/app/header/header-bottom/header-bottom.component.html
@@ -9,6 +9,8 @@
       type="search"
       id="inputSearch"
       placeholder="Search your favourite products..."
+      [(ngModel)]="searchProducts"
+      (input)="onSearchProducts()"
     />
     <input type="button" value="Search" />
   </div>
