--- a/client/src/app/shop/shop-categories/shop-categories.component.css
+++ b/client/src/app/shop/shop-categories/shop-categories.component.css
@@ -30,9 +30,9 @@
 }
 
 .category-block:hover {
-  -webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: var(--box-shadow);
+  -moz-box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow);
 }
 
 .category-img {
