--- a/client/src/app/header/header-bottom/header-bottom.component.css
+++ b/client/src/app/header/header-bottom/header-bottom.component.css
@@ -145,9 +145,9 @@ nav {
 }
 
 .search-product-block:hover {
-  -webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: var(--box-shadow);
+  -moz-box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow);
 }
 
 .search-product-img-holder {
