--- a/client/src/app/home/site-info/site-info.component.css
+++ b/client/src/app/home/site-info/site-info.component.css
@@ -16,9 +16,9 @@ hr {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  -webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: var(--box-shadow);
+  -moz-box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow);
   border-radius: var(--block-radius);
 }
 
