--- a/client/src/app/home/testimonials/testimonials.component.css
+++ b/client/src/app/home/testimonials/testimonials.component.css
@@ -20,9 +20,9 @@ h2 {
   color: var(--white);
   text-align: center;
   position: relative;
-  -webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: var(--box-shadow);
+  -moz-box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow);
   border-radius: var(--block-radius);
 }
 
