--- a/client/src/app/our-company/repair-service/repair-service.component.css
+++ b/client/src/app/our-company/repair-service/repair-service.component.css
@@ -10,9 +10,9 @@ h2 {
   width: 70%;
   border-collapse: collapse;
   margin: 0 auto;
-  -webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: var(--box-shadow);
+  -moz-box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow);
 }
 
 th,
