--- a/client/src/app/our-company/stores/stores.component.css
+++ b/client/src/app/our-company/stores/stores.component.css
@@ -56,13 +56,12 @@ hr {
   grid-template-columns: repeat(1, 1fr);
   grid-template-rows: repeat(5, 1fr);
   row-gap: 1rem;
-  -webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
 }
 
 .store-block:hover {
-  background-color: var(--dark-white);
+  -webkit-box-shadow: var(--box-shadow);
+  -moz-box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow);
 }
 
 #map {
