--- a/client/src/app/shop/category-products/shop-products/shop-products.component.css
+++ b/client/src/app/shop/category-products/shop-products/shop-products.component.css
@@ -19,13 +19,12 @@
   background-color: var(--grey);
   position: relative;
   cursor: pointer;
-  -webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
 }
 
 .shop-product--block:hover {
-  background-color: var(--grey-2);
+  -webkit-box-shadow: var(--box-shadow);
+  -moz-box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow);
 }
 
 .shop-card--product {
