Fixed counting cart items and adding to cart from featured products

--- a/client/src/app/header/header-bottom/header-bottom.component.html
+++ b/client/src/app/header/header-bottom/header-bottom.component.html
@@ -50,7 +50,9 @@
     </div>
     <div class="header-user-icon">
       <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-      <div class="count-circle"><p>0</p></div>
+      <div class="count-circle">
+        <p>{{ cartItemsCount }}</p>
+      </div>
     </div>
     <div class="header-user-icon">
       <a href="#"><i class="fa-solid fa-user"></i></a>
