--- a/client/src/app/header/header-bottom/header-bottom.component.html
+++ b/client/src/app/header/header-bottom/header-bottom.component.html
@@ -49,7 +49,7 @@
       </ng-container>
     </div>
     <div class="header-user-icon">
-      <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+      <a routerLink="/cart"><i class="fa-solid fa-cart-shopping"></i></a>
       <div class="count-circle">
         <p>{{ cartItemsCount }}</p>
       </div>
