--- a/client/src/app/wishlist/wishlist.component.css
+++ b/client/src/app/wishlist/wishlist.component.css
@@ -21,7 +21,7 @@ hr {
   position: absolute;
   width: 2.2rem;
   height: 2.2rem;
-  background-color: var(--golden);
+  background-color: var(--red);
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -31,7 +31,7 @@ hr {
 }
 
 .heart-left-top i {
-  color: var(--red);
+  color: var(--white);
   font-size: 1.2rem;
 }
 
