--- a/client/src/app/user/user.component.html
+++ b/client/src/app/user/user.component.html
@@ -121,14 +121,47 @@
             <input
               type="password"
               id="pass-tb-edit"
-              formControlName="password"
-              placeholder="Password"
+              formControlName="oldPassword"
+              placeholder="Old password"
             />
             <span
               class="invalid-input"
               *ngIf="
-                !editForm.get('password').valid &&
-                editForm.get('password').touched
+                !editForm.get('oldPassword').valid &&
+                editForm.get('oldPassword').touched
+              "
+              >Password must have one uppercase, one lowercase letter, one
+              digit, one special character and minimum 8 characters.</span
+            >
+          </div>
+          <div class="form-block">
+            <input
+              type="password"
+              id="pass-tb-edit"
+              formControlName="oldPasswordRetype"
+              placeholder="Retype old password"
+            />
+            <span
+              class="invalid-input"
+              *ngIf="
+                !editForm.get('oldPasswordRetype').valid &&
+                editForm.get('oldPasswordRetype').touched
+              "
+              >Wrong old password.</span
+            >
+          </div>
+          <div class="form-block">
+            <input
+              type="password"
+              id="pass-tb-edit"
+              formControlName="newPassword"
+              placeholder="New password"
+            />
+            <span
+              class="invalid-input"
+              *ngIf="
+                !editForm.get('newPassword').valid &&
+                editForm.get('newPassword').touched
               "
               >Password must have one uppercase, one lowercase letter, one
               digit, one special character and minimum 8 characters.</span
@@ -138,16 +171,16 @@
             <input
               type="password"
               id="re-pass-tb-edit"
-              formControlName="retypePassword"
-              placeholder="Retype password"
+              formControlName="newPasswordRetype"
+              placeholder="Retype new password"
             />
             <span
               class="invalid-input"
               *ngIf="
-                !editForm.get('retypePassword').valid &&
-                editForm.get('retypePassword').touched
+                !editForm.get('newPasswordRetype').valid &&
+                editForm.get('newPasswordRetype').touched
               "
-              >Wrong password.</span
+              >Wrong new password.</span
             >
           </div>
 
@@ -172,7 +205,7 @@
               type="submit"
               id="edit-submit-btn"
               value="Edit"
-              [disabled]="!editForm.valid || editForm.untouched"
+              [disabled]="!editForm.valid"
             />
           </div>
         </form>
