--- a/client/src/app/user/user.component.css
+++ b/client/src/app/user/user.component.css
@@ -172,3 +172,63 @@ input[type="email"] {
   justify-content: flex-start;
   align-items: center;
 }
+
+#user-messages {
+  margin-top: 2rem;
+}
+
+#user-messages-holder {
+  width: 60%;
+  margin: 0 auto;
+}
+
+.user-message-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 0.7rem;
+  cursor: pointer;
+  margin-bottom: 0.5rem;
+}
+
+.user-message-row:hover {
+  opacity: 0.8;
+  transform: scale(1.01);
+}
+
+.user-message-row::after {
+  font-family: FontAwesome;
+  content: "\F107";
+  font-size: 1rem;
+  transition: transform 200ms ease-in-out;
+}
+
+.user-message-row.active::after {
+  transform: rotate(180deg);
+}
+
+.user-message-block {
+  /* display: flex;
+  flex-direction: column;
+  justify-content: space-between; */
+  margin-top: 1rem;
+}
+
+.expand-content {
+  font-size: 1.8rem;
+}
+
+.message-content {
+  padding: 1rem 0.5rem;
+  background-color: var(--grey);
+  border-bottom: solid 1px var(--grey-2);
+  border-right: solid 1px var(--grey-2);
+  border-left: solid 1px var(--grey-2);
+  border-radius: 0 0 var(--block-radius-min) var(--block-radius-min);
+}
+
+.message-content.toggle {
+  height: 0;
+  padding: 0;
+  overflow: hidden;
+}
